# raytracer

./: .gitignore  CMakeLists.txt  README.md  image.ppm
include/: camera.h  colour.h  hittable.h  interval.h  material.h  rtweekend.h  sphere.h  vec3.h
raytracer/: colour.h  hittable.h  hittable_list.h  interval.h  ray.h  raytracer.cpp  sphere.h  vec3.h
src/: raytracer.cpp
